[WIP] Adds option including regtest daemon startup.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "lint": "ng lint --type-check && htmlhint --ignore **/documentation/**,**/docs/**,**/packages/** && sass-lint -v",
     "e2e": "ng e2e",
     "generate:versions": "node modules/clientBinaries/generateVersions.js",
-    "generate:documentation": "",
     "checksum": "cd packages && checksum -a sha256 *.*",
     "build:electron:prod": "ng build --base-href=./ --env=prod",
     "build:electron:fast": "ng build --base-href=./ --sourcemap=false",
@@ -43,7 +42,10 @@
     "travis:win64": "electron-builder --win --x64 && yarn run checksum",
     "travis:win32": "electron-builder --win --ia32 && yarn run checksum",
     "travis:test": "ng test --single-run --code-coverage",
-    "start": "yarn run start:electron:fast"
+    "start": "yarn run start:electron:fast",
+    "test:e2e": "yarn run build:electron:fast && mocha \"./test/**/test-*.js\"",
+    "start:electron:regtest": "node ./test/index.js",
+    "start:electron:test": "electron . --dev --env=regtest"
   },
   "productName": "Particl Desktop",
   "build": {
@@ -167,6 +169,8 @@
     "@types/jasmine": "^2.8.6",
     "@types/node": "^9.4.6",
     "angularx-qrcode": "^1.0.1",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "checksum": "^0.1.1",
     "codelyzer": "^4.1.0",
     "coveralls": "^3.0.0",
@@ -182,12 +186,14 @@
     "karma-coverage-istanbul-reporter": "^1.4.1",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "mocha": "^5.2.0",
     "ng2-logger": "^1.0.11",
     "ngx-clipboard": "^10.0.0",
     "ngx-infinite-scroll": "^0.8.3",
     "node-sass": "^4.7.2",
     "protractor": "^5.3.0",
     "sass-lint": "^1.10.2",
+    "spectron": "^4.0.0",
     "ts-node": "^5.0.0",
     "tslint": "^5.9.0",
     "tslint-microsoft-contrib": "^5.0.3",
